feat(logistics): manage providers channels and price rules
